--- a/Zomato_landing-page/zomato_landing_page-master/index.html
+++ b/Zomato_landing-page/zomato_landing_page-master/index.html
@@ -119,6 +119,7 @@
         <li>Partnership</li>
         <li>Career</li>
         <li>Contact</li>
+        <li>mobile</li>
       </ul>
     </footer>
   </body>
